finish lab 5