@@ -4,13 +4,11 @@ import java.util.*;
 
 public class ItemSet {
 
-    private ArrayList<Integer> items;
-    private int transactionNum;
+    private List<Integer> items;
 
     public ItemSet(String itemSet, HashMap<Integer, Integer> itemFrequency) {
         // item set input as transaction number followed by a list of items that were purchases
         String[] tokens = itemSet.split(", ");
-        transactionNum = Integer.parseInt(tokens[0]);
         items = new ArrayList<>();
         // start at 1 to account for transaction number
         for (int i = 1; i < tokens.length; i++) {
@@ -19,24 +17,20 @@ public class ItemSet {
             // no duplicate items in transaction so will only add once
             itemFrequency.merge(item, 1, Integer::sum); // number of times it appears in transaction
         }
-        // check for duplicate items in a transaction
+        // sanity check for duplicate items in a transaction
         if (new HashSet<>(items).size() != items.size()) {
             System.out.println("Error: ItemSet contains duplicate items!");
         }
     }
 
     // create an itemSet with a single item
-    public ItemSet(int item) {
-        items = new ArrayList<>(List.of(item));
-        transactionNum = -1; // not associated with transaction
+    public ItemSet(List<Integer> newItems) {
+        Collections.sort(newItems);
+        this.items = Collections.unmodifiableList(newItems);
     }
 
-    public ArrayList<Integer> getItems() {
+    public List<Integer> getItems() {
         return items;
-    }
-
-    public int getTransactionNum() {
-        return transactionNum;
     }
 
     public int getSize() {
@@ -50,5 +44,18 @@ public class ItemSet {
     @Override
     public String toString() {
         return items.toString();
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof ItemSet)) return false;
+        ItemSet other = (ItemSet) o;
+        return items.equals(other.items);
+    }
+
+    @Override
+    public int hashCode() {
+        return items.hashCode();
     }
 }
